<resources>
    <string name="app_name">Places Search</string>
    <string name="keyword_label">Keyword</string>
    <string name="category_label">Category</string>
    <string name="distance_label">Distance (in miles)</string>
    <string name="origin_label">From</string>
    <string name="option1">Current location</string>
    <string name="option2">Other. Specify location</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="mandatory">Please enter mandatory field</string>
    <string name="search_results_activity_name">Search results</string>
    <string name="previous_button">PREVIOUS</string>
    <string name="next_button">NEXT</string>
    <string name="th_address">Address</string>
    <string name="th_phone">Phone Number</string>
    <string name="th_price">Price Level</string>
    <string name="th_rating">Rating</string>
    <string name="th_url">Google Page</string>
    <string name="th_website">Website</string>
    <string-array name="reviews">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>
    <string-array name="orders">
        <item>Default order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>
    <string-array name="category">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Train Station</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>
    <string-array name="travel_mode">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
